--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@airtable/flowchart-block",
-    "version": "1.0.3",
+    "name": "@airtable/flowchart-app",
+    "version": "1.0.4",
     "scripts": {
         "lint": "eslint frontend"
     },
